[package]
name = "shelp"
description="A interactive shell, helper library"
version = "0.1.2"
authors = ["Lutetium-Vanadium"]
edition = "2018"
license="MIT"
homepage="https://github.com/Lutetium-Vanadium/shelp#readme"
repository="https://github.com/Lutetium-Vanadium/shelp"
readme="README.md"
documentation="https://docs.rs/shelp"

[dependencies]
crossterm = "0.18.2"
