[package]
name = "shelp"
description="A interactive shell, helper library"
version = "0.2.1"
authors = ["Lutetium-Vanadium"]
edition = "2018"
license="MIT"
homepage="https://github.com/Lutetium-Vanadium/shelp#readme"
repository="https://github.com/Lutetium-Vanadium/shelp"
readme="README.md"
documentation="https://docs.rs/shelp"

[dependencies]
crossterm = {version = "0.18.2", features=["event-stream"] }
futures = "0.3.12"
